# rust-toy-language

./: Cargo.toml
src/grammar/: Cargo.toml
src/grammar/scripts/: run_one_test.sh
src/grammar/src/: lib.rs
src/grammar/src/error/: mod.rs
src/grammar/src/parser/: ext.rs  mod.rs  parser.rs  scope.rs  symbol.rs  typ.rs
src/lexical/: Cargo.toml
src/lexical/src/: lib.rs
src/lexical/src/parser/: from_string.rs  mod.rs  token_reader.rs
src/lexical/src/simple/: from_string.rs  mod.rs  token_reader.rs
src/lexical/src/token/: mod.rs  reader.rs  token_reader.rs
src/semantic/: Cargo.toml
src/semantic/src/analysis/: analysis.rs  mod.rs
src/simplerun/: Cargo.toml
src/simplerun/src/: lib.rs
src/simplerun/src/calculator/: calc_result.rs  calculator.rs  calculator_with_semantic.rs  mod.rs  stack_frame.rs
src/utils/src/: lib.rs
src/utils/src/cell/: mod.rs
