[package]
name = "grammar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
debug = []
default = ["std"]

[dependencies]
lexical = { path = "../lexical" }
utils = { path = "../utils" }
matches = { version = "0.1" }
educe = { version = "0.4" }
derive-new = { version = "0.5.9" }
# log = "0.4"
