[package]
name = "simplerun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
lexical = { path = "../lexical" }
grammar = { path = "../grammar" }
semantic = { path = "../semantic" }

educe = { version = "0.4" }
derive-new = { version = "0.5.9" }
